--- a/qn_analysis/setups/e895_correlations.yml
+++ b/qn_analysis/setups/e895_correlations.yml
@@ -27,7 +27,7 @@ _axes:
     lo: 0
     hi: 100
   - &impact_parameter
-    name: event_header/b
+    name: event_header_b
     nb: 8
     lo: 1.5
     hi: 9.5
