--- a/qn_analysis/setups/e895_corrections.yml
+++ b/qn_analysis/setups/e895_corrections.yml
@@ -9,8 +9,8 @@ _axes:
   - &impact_parameter
     name: event_header/b
     nb: 8
-    lo: 1.5
-    hi: 9.5
+    lo: 2.0
+    hi: 9.0
   - &ax-protons-pT {name: tracks/pT, nb: 10, lo: 0.0, hi: 2.}
   - &ax-pions-pT {name: tracks/pT, nb: 10, lo: 0.0, hi: 1.}
   - &ax-y {name: tracks/y_norm, nb: 20, lo: -1.0, hi: 1.0}
@@ -27,13 +27,13 @@ _cuts:
     tracks/pid : { equals: 211 }
     tracks/primary : { equals: 1 }
   - &fragments-1-cuts
-    tracks/y_norm : { range: [0.8, 0.9] }
+    tracks/y_norm : { range: [1.2, 2.0] }
     tracks/baryon : { equals: 1 }
   - &fragments-2-cuts
-    tracks/y_norm : { range: [0.9, 1.0] }
+    tracks/y_norm : { range: [0.4, 0.8] }
     tracks/baryon : { equals: 1 }
   - &fragments-3-cuts
-    tracks/y_norm : { range: [1.0, 1.1] }
+    tracks/y_norm : { range: [-1.0, -0.6] }
     tracks/baryon : { equals: 1 }
 
 E895:
@@ -51,6 +51,9 @@ E895:
       - *ax-y
       - *ax-protons-pT
     cuts: *good-protons
+    corrections:
+      - recentering
+      - twist-and-rescale
   - name: pi_neg
     type: track
     phi:  tracks/phi
@@ -60,6 +63,9 @@ E895:
       - *ax-y
       - *ax-pions-pT
     cuts: *good-pi-neg
+    corrections:
+      - recentering
+      - twist-and-rescale
   - name: pi_pos
     type: track
     phi:  tracks/phi
@@ -69,7 +75,9 @@ E895:
       - *ax-y
       - *ax-pions-pT
     cuts: *good-pi-pos
-
+    corrections:
+      - recentering
+      - twist-and-rescale
 #  Fragments
   - name: F1
     type: track
@@ -77,18 +85,27 @@ E895:
     weight: Ones
     norm: m
     cuts: *fragments-1-cuts
+    corrections:
+      - recentering
+      - twist-and-rescale
   - name: F2
     type: track
     phi: tracks/phi
     weight: Ones
     norm: m
     cuts: *fragments-2-cuts
+    corrections:
+      - recentering
+      - twist-and-rescale
   - name: F3
     type: track
     phi: tracks/phi
     weight: Ones
     norm: m
     cuts: *fragments-3-cuts
+    corrections:
+      - recentering
+      - twist-and-rescale
 
   # REFERENCE PSI RP
   - name: e895_ep
