One more attempt

--- a/qn_analysis/setups/e895_corrections.yml
+++ b/qn_analysis/setups/e895_corrections.yml
@@ -20,7 +20,8 @@ _cuts:
   - &good-protons
     tracks/pid : { equals: 2212 }
     tracks/pT : { range: [0.1, 2.0] }
-#    tracks/primary : { equals: 1 }
+    tracks/primary : { equals: 1 }
+    tracks/weight : { equals: 0 }
   - &good-pi-neg
     tracks/pid : { equals: -211 }
     tracks/pT : { range: [0.1, 2.0] }
