--- a/qn_analysis/setups/e895_corrections.yml
+++ b/qn_analysis/setups/e895_corrections.yml
@@ -13,7 +13,7 @@ _axes:
     hi: 9.0
   - &ax-protons-pT {name: tracks/pT, nb: 10, lo: 0.0, hi: 2.}
   - &ax-pions-pT {name: tracks/pT, nb: 10, lo: 0.0, hi: 1.}
-  - &ax-y {name: tracks/e895_y_cm, nb: 20, lo: -1.0, hi: 1.0}
+  - &ax-y {name: tracks/e895_y_cm, nb: 10, lo: -1.0, hi: 1.0}
 
 
 _cuts:
@@ -48,6 +48,15 @@ E895:
   axes: [ *impact_parameter ]
   q-vectors:
   # PARTICLES
+  - name: e895_proton
+    type: track
+    phi:  tracks/diffphi
+    weight: Ones
+    norm: m
+    axes:
+      - *ax-y
+      - *ax-protons-pT
+    cuts: *good-protons
   - name: proton
     type: track
     phi:  tracks/phi
