--- a/qn_analysis/setups/e895_corrections.yml
+++ b/qn_analysis/setups/e895_corrections.yml
@@ -50,7 +50,7 @@ E895:
   # PARTICLES
   - name: e895_proton
     type: track
-    phi:  tracks/qphi
+    phi:  tracks/diffphi
     weight: Ones
     norm: m
     axes:
