--- a/qn_analysis/setups/e895_correlations.yml
+++ b/qn_analysis/setups/e895_correlations.yml
@@ -20,6 +20,8 @@ _detectors: &detectors
     tags: [ fragment_vector, pin_vector ]
   - name: PiP
     tags: [ fragment_vector, pip_vector ]
+  - name: fragments
+    tags: [ frag, frag_vector ]
 # ----- Event plane from E895 trees -----
   - name: e895_ep
     tags: [ psi_vector ]
@@ -70,6 +72,12 @@ _tasks_args:
 # ----- Task array for SP components of FHCal vectors -----
   - &ta_fragments
     query: { tags: { any-in: [ fragment_vector ] } }
+    query-list: *detectors
+    components: *sp1_components
+    correction-steps: [ plain, recentered, rescaled ]
+    weight: ones
+  - &ta_frag
+    query: { tags: { any-in: [ frag_vector ] } }
     query-list: *detectors
     components: *sp1_components
     correction-steps: [ plain, recentered, rescaled ]
@@ -139,6 +147,11 @@ _tasks:
     folder: "/SP/Fragments/u1Q1"
     axes: [ *impact_parameter ]
   - args: [*ta_fragments, *ta_fragments]
+    n-samples: 100
+    weights-type: reference
+    folder: "/SP/Fragments/Q1Q1"
+    axes: [ *impact_parameter ]
+  - args: [*ta_frag, *ta_frag]
     n-samples: 100
     weights-type: reference
     folder: "/SP/Fragments/Q1Q1"
